DevTools: Fix race in TracingHandler::OnBufferUsage

The OnBufferUsage is called through double async chain and by that time
the tracing can already be stopped. Do not report usage in this case.

The bug caused several tests to flake, e.g.
http/tests/devtools/tracing/timeline-style/timeline-style-recalc-all-invalidator-types.js

BUG=846920

Change-Id: I94259e38e49e35f21974faf9aef69f96d118c36b
Reviewed-on: https://chromium-review.googlesource.com/1125213
Commit-Queue: Alexei Filippov <alph@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572436}
Former-commit-id: 34cfe3d9636865cca808b512982e58b8942519dc